# basket_option_pricer

./: CITATION.cff  CMakeLists.txt  README.md  conanfile.txt
include/basket_option_pricer/: basket_options.hpp  basket_options_gen.hpp  standard_normal.hpp
pybind/: CMakeLists.txt
pybind/basket_option_pricer/: pricer.cpp
src/basket_option_pricer/: basket_options.cpp  basket_options_gen.cpp  standard_normal.cpp
src_test/: CMakeLists.txt
src_test/basket_options/: borovkova_1.cpp
